cm.yaml
# Create a Pod named pod1 of image nginx:alpine
# Make ConfigMap trauerweide available as environment variable TREE1
# Mount all keys of ConfigMap birke as volume. The files should be available under /etc/birke/*
# Test env+volume access in the running Pod

# Solution

apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  volumes:
  - name: birke
    configMap:
      name: birke
  containers:
  - image: nginx:alpine
    name: pod1
    volumeMounts:
      - name: birke
        mountPath: /etc/birke
