myconfigpod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: myconfigpod
  name: myconfigpod
spec:
  containers:
  - image: httpd
    name: myconfigpod
