pod-configmaps.yaml
apiVersion: v1
kind: Pod
metadata:  
  name: configmap-pod 
spec:  
  containers:  
    - name: test-container  
      image: k8s.gcr.io/busybox  
      command: [ "/bin/sh", "-c", "env" ]  
      resources:
        limits:
          memory: "128Mi"
          cpu: 100m 
  restartPolicy: Never
