pod-multicontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sega
  labels:
    name: sega
spec:
  containers:
  - name: tails
    image: busybox
    command: ["sleep","3600"]
    resources: 
      limits:
        memory: "128Mi"
        cpu: "500m"
    readinessProbe:
      
  - name: sonic
    image: nginx
    resources: 
      limits:
        memory: "128Mi"
        cpu: "500m"
