pod-with-pvc.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: myPod
  labels:
    name: frontend
spec:
  containers:
  - name: httpd
    image: httpd
    volumeMounts:
    - name: myvol
      mountPath: "/var/www/html"
  volumes: 
  - name: myvol
    persistentVolumeClaim: 
      claimName: myclaim
